recursion.cons.last.Last.scala.error
Compilation error:
Last:9: error: not found: value lenght
};if (lenght(l == 1)) {
      ^Last:12: error: type mismatch;
 found   : List[Int]
 required: Int
    l.tail
      ^