recursion.cons.last.Last.scala.code
def last(l:List[Int]): Int = {
  def length(l:List[Int]): Int = {
  if (l == Nil) {
    return 0
  };else {
    
  };return 1+length(l.tail)
};if (lenght(l == 1)) {
    return l.head
  };else {
    l.tail
  }
}